# palworld-save-facts

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
docs/: release-policy.md  v1-v2-compatibility.md
scripts/: private_benchmark.py  private_validate.py  validate.sh
src/palworld_save_facts/: __init__.py  __main__.py  analyze.py  canonical.py  cli.py  extract.py  limits.py
tests/: test_extract.py
tests/fixtures/snapshot/: Level.json
tests/fixtures/snapshot/Players/: player-a.json
